# rust_test

./: Cargo.toml
front/: index.html  index_2.html
src/: main.rs
