[package]
name = "mssql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
tiberius = "0.12"
tokio-util = { version = "0.7", features = ["full"]}
once_cell = "1.19"
axum ="0.7"
serde = { version = "1.0", features = ["derive"] }
hyper="1.2"
tower-http = { version = "0.5.2", features = ["cors"] }